[gd_scene load_steps=9 format=2]

[ext_resource path="res://tscn/chara/anim.tscn" type="PackedScene" id=1]
[ext_resource path="res://tscn/chara/charaV.gd" type="Script" id=2]
[ext_resource path="res://tscn/chara/hpBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://res/ying/ying.png" type="Texture" id=4]
[ext_resource path="res://tscn/chara/dragK.gd" type="Script" id=5]
[ext_resource path="res://tscn/chara/popLv.tscn" type="PackedScene" id=6]
[ext_resource path="res://res/anim/p/p2.tres" type="SpriteFrames" id=7]
[ext_resource path="res://tscn/charaDlg/buffsPan.tscn" type="PackedScene" id=8]

[node name="c_" type="Node2D"]
script = ExtResource( 2 )

[node name="Ying" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 0.470588 )
position = Vector2( 0, 4 )
scale = Vector2( 0.796875, 0.414063 )
texture = ExtResource( 4 )

[node name="anim" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -35 )
frames = ExtResource( 7 )
frame = 10

[node name="ui" type="Node2D" parent="."]

[node name="hpBar" parent="ui" instance=ExtResource( 3 )]
position = Vector2( 0, 4 )
scale = Vector2( 1, 1 )

[node name="box" type="VBoxContainer" parent="ui"]
margin_left = -39.0
margin_top = -218.0
margin_right = 42.0
margin_bottom = -24.0
mouse_filter = 2
alignment = 2

[node name="dragK" type="TextureButton" parent="ui"]
margin_left = -22.0
margin_top = -64.0
margin_right = 20.0
margin_bottom = -1.0
mouse_filter = 1
script = ExtResource( 5 )

[node name="v" type="Control" parent="ui"]
margin_top = -3.0
margin_bottom = -3.0
mouse_filter = 1

[node name="popLv" parent="ui/v" instance=ExtResource( 6 )]
margin_left = -34.0
margin_top = -3.0
margin_right = -17.0
margin_bottom = 9.0

[node name="eqps" type="HBoxContainer" parent="ui/v"]
margin_left = -30.0
margin_top = 9.0
margin_right = 170.0
margin_bottom = 73.0
rect_scale = Vector2( 0.3, 0.3 )
mouse_filter = 2
alignment = 1

[node name="buffs" parent="ui" instance=ExtResource( 8 )]
margin_left = -24.0
margin_top = 6.0
margin_right = 72.0
margin_bottom = 30.0
rect_scale = Vector2( 0.5, 0.5 )

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="gui_input" from="ui/dragK" to="." method="_on_dragK_gui_input"]
[connection signal="mouse_entered" from="ui/dragK" to="." method="_on_dragK_mouse_entered"]
[connection signal="pressed" from="ui/dragK" to="." method="_on_dragK_pressed"]
